Name: curryer-rpc
Version: 0.3.6
License: PublicDomain
Build-Type: Simple
Homepage: https://github.com/agentm/curryer
Bug-Reports: https://github.com/agentm/curryer
Author: AgentM
Stability: experimental
Category: RPC
Maintainer: agentm@themactionfaction.com
Cabal-Version: >= 1.10
Synopsis: Fast, Haskell RPC
Description: Haskell-to-Haskell RPC using Winery serialization.
Extra-Source-Files: Changelog.markdown README.markdown

Source-Repository head
    Type: git
    location: https://github.com/agentm/curryer

Library
        Build-Depends: base >= 4.12 && < 4.19
                     , winery
                     , bytestring
                     , streamly == 0.10.1
                     , streamly-core >= 0.2.2
-- includes critical fix for pinned arrays
                     , streamly-bytestring >= 0.2.2
                     , network
                     , exceptions
                     , async
                     , uuid
                     , fast-builder
                     , binary
                     , containers
                     , stm-containers
                     , hashable
                     , time
                     , network-byte-order
                     , stm
        Hs-Source-Dirs: ./src
        Default-Language: Haskell2010
        ghc-options: -Wall -fwarn-unused-binds -fwarn-unused-imports
        Exposed-Modules:
                        Network.RPC.Curryer.Server
                        Network.RPC.Curryer.Client
                        Network.RPC.Curryer.StreamlyAdditions

Test-Suite test
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-unused-binds -fwarn-unused-imports
  build-depends: tasty
               , tasty-hunit
               , base
               , text
               , curryer-rpc
               , winery
               , network
               , async
               , stm
               , streamly-core >= 0.1.0
               , bytestring
               , streamly-bytestring >= 0.2.1
  other-modules: Curryer.Test.Basic

Benchmark perf
    Default-Language: Haskell2010
    Default-Extensions: OverloadedStrings
    Build-Depends: base, criterion, curryer-rpc, network, winery, async, bytestring

    Main-Is: Basic.hs
    Type: exitcode-stdio-1.0
    GHC-Options: -Wall -threaded -rtsopts
    -- -fprof-auto
    HS-Source-Dirs: ./bench
    
Executable SimpleKeyValueServer
    Build-Depends: stm-containers, stm, base, curryer-rpc, winery
    Main-Is: examples/SimpleKeyValueServer.hs
    GHC-Options: -Wall -threaded
    Default-Language: Haskell2010

Executable SimpleKeyValueClient
    Build-Depends: stm, base, curryer-rpc, winery, optparse-generic
    Main-Is: examples/SimpleKeyValueClient.hs
    GHC-Options: -Wall -threaded
    Default-Language: Haskell2010
    